--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 VITE_GOOGLE_API_KEY = your_api_key_here
-VITE_YOUTUBE_VIDEOS_API = https://youtube.com/videos/api
+VITE_YOUTUBE_VIDEOS_API = your_video_api_link
